// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Container /> should render Container with theme props 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c0 + .c0 {
  margin-left: 1em;
}

<span
  className="c0"
/>
`;

exports[`Test <Label /> should render Label with disabled props 1`] = `
.c0 {
  cursor: pointer;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #1D3141;
  color: #d6d6d6;
  font-size: 16px;
  line-height: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 30px;
  display: inline-block;
  font-weight: 600;
}

.c0:before {
  box-sizing: content-box;
  background-color: #ffffff;
  border-radius: 100%;
  border: 1px solid;
  border-color: #d6d6d6;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
  content: '';
  height: 20px;
  left: 0;
  position: absolute;
  top: 0;
  width: 20px;
}

.c0:hover:before {
  background-color: #f6f6f6;
}

.c0:after {
  box-sizing: content-box;
  background-color: #0099cf;
  border-radius: 100%;
  content: '';
  opacity: 0;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  height: 12px;
  width: 12px;
  top: 5px;
  left: 5px;
}

<label
  className="c0"
  disabled={true}
/>
`;

exports[`Test <Label /> should render Label with error props 1`] = `
.c0 {
  cursor: pointer;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #1D3141;
  color: #f80000;
  font-size: 16px;
  line-height: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 30px;
  display: inline-block;
  font-weight: 600;
}

.c0:before {
  box-sizing: content-box;
  background-color: #ffffff;
  border-radius: 100%;
  border: 1px solid;
  border-color: #a6adb4;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
  content: '';
  height: 20px;
  left: 0;
  position: absolute;
  top: 0;
  width: 20px;
}

.c0:after {
  box-sizing: content-box;
  background-color: #0099cf;
  border-radius: 100%;
  content: '';
  opacity: 0;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  height: 12px;
  width: 12px;
  top: 5px;
  left: 5px;
}

<label
  className="c0"
/>
`;

exports[`Test <Label /> should render Label with theme props 1`] = `
.c0 {
  cursor: pointer;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #1D3141;
  font-size: 16px;
  line-height: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 30px;
  display: inline-block;
  font-weight: 600;
}

.c0:before {
  box-sizing: content-box;
  background-color: #ffffff;
  border-radius: 100%;
  border: 1px solid;
  border-color: #a6adb4;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
  content: '';
  height: 20px;
  left: 0;
  position: absolute;
  top: 0;
  width: 20px;
}

.c0:after {
  box-sizing: content-box;
  background-color: #0099cf;
  border-radius: 100%;
  content: '';
  opacity: 0;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  height: 12px;
  width: 12px;
  top: 5px;
  left: 5px;
}

<label
  className="c0"
/>
`;

exports[`Test <Radio /> should render Check with theme disabled props 1`] = `
.c0 {
  opacity: 0;
  position: absolute;
  right: 0;
}

.c0:checked + label:after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<input
  className="c0"
  disabled={true}
/>
`;

exports[`Test <Radio /> should render Check with theme props 1`] = `
.c0 {
  opacity: 0;
  position: absolute;
  right: 0;
}

.c0:checked + label:after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<input
  className="c0"
/>
`;
